examples/test/testpolicy14670.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14670
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key3: value45
      key2: value48
      key11: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value17
      podSelector:
        matchLabels:
          key0: value14
          key20: value42
